<resources>
    <string name="app_name">Memo</string>
    <string name="create_new_memo">Create New Memo</string>
    <string name="upcoming_memos">Upcoming Memos</string>
    <string name="create_new">create new</string>
    <string name="name">Name</string>
    <string name="desc_optional">Description (Optional)</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">save</string>
    <string name="date">Date</string>
    <string name="event_date">Event Date</string>
    <string name="err_end_time_error">Start time cannot be later than End time</string>
    <string name="err_start_time_error">Selected time is in the past</string>
    <string name="conflict_exception">Selected time slot has an existing event</string>
    <string name="you_have_not_added_any_memo_yet">You have not added any memo yet</string>
</resources>